2024-12-13  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-repo-mode): Do not enable
	bug-reference-prog-mode when bug-reference-bug-regexp or
	bug-reference-url-format already exists as a local variable.

2024-12-07  Ulrich Müller  <ulm@gentoo.org>

	* devbook-mode.el (devbook-fill-tag-nobreak-p): New function.
	(devbook-mode): Add it to fill-nobreak-predicate hook.
	* test/devbook-mode-tests.el (devbook-mode-test-fill-nobreak-p):
	New test.

2024-11-15  Ulrich Müller  <ulm@gentoo.org>

	* test/ebuild-mode-tests.el (ebuild-mode-test-skeleton):
	* test/gentoo-newsitem-mode-tests.el
	(gentoo-newsitem-test-skeleton): Override pos-visible-in-window-p
	unconditionally.

2024-11-12  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.76 released.

	* ebuild-mode-keywords.el (ebuild-mode-keywords-eclass):
	Regenerated.

	* devbook-mode.el (devbook-set-schema, devbook-insert-skeleton):
	The document element has been renamed from guide to devbook.
	* test/devbook-mode-tests.el (devbook-mode-test-skeleton): Update.

2024-11-11  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-mode-bug-regexp): Allow a fragment
	identifier, in order to refer to a specific comment.
	* test/ebuild-mode-tests.el (ebuild-mode-test-bug-url): Update.

2024-11-06  Ulrich Müller  <ulm@gentoo.org>

	* devbook-mode.el (devbook-set-schema): Renamed from
	devbook-locate-schema-file. Call rng-locate-schema-file first,
	then fall back to parent directories.
	(devbook-mode): Update caller.
	* test/devbook-mode-tests.el (devbook-mode-test-set-schema):
	Renamed from devbook-mode-test-locate-schema and updated.

	* test/ebuild-mode-tests.el (ebuild-mode-test-skeleton):
	* test/glep-mode-tests.el (glep-mode-test-skeleton):
	* test/gentoo-newsitem-mode-tests.el
	(gentoo-newsitem-test-skeleton):
	* test/devbook-mode-tests.el (devbook-mode-test-skeleton):
	Move variable and function for test input into the cl-letf* form
	and delete them from global scope.
